--- a/style.css
+++ b/style.css
@@ -1176,13 +1176,11 @@ kbd {
 }
 
 .screenshot-img {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: auto;
+    object-fit: contain;
     display: none;
+    border-bottom: 1px solid var(--border);
 }
 
 .screenshot-card h3 {
